--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,47 @@
+/*
+=============== 
+Variables
+===============
+*/
 $primary: #7209b7;
 $secondary: #006466;
+/* dark shades of primary color*/
+$clr-primary-1: hsl(162, 61%, 89%);
+$clr-primary-2: hsl(162, 60%, 78%);
+$clr-primary-3: hsl(162, 61%, 67%);
+$clr-primary-4: hsl(162, 61%, 57%);
+/* primary/main color */
+$clr-primary-5: hsl(162, 73%, 46%);
+/* lighter shades of primary color */
+$clr-primary-6: #1aa179;
+$clr-primary-7: #13795b;
+$clr-primary-8: #0d503c;
+$clr-primary-9: #06281e;
+/* darkest grey - used for headings */
+$clr-grey-1: hsl(212, 33%, 89%);
+$clr-grey-2: hsl(210, 31%, 80%);
+$clr-grey-3: hsl(211, 27%, 70%);
+$clr-grey-4: hsl(209, 23%, 60%);
+/* grey used for paragraphs */
+$clr-grey-5: hsl(210, 22%, 49%);
+$clr-grey-6: hsl(209, 28%, 39%);
+$clr-grey-7: hsl(209, 34%, 30%);
+$clr-grey-8: hsl(211, 39%, 23%);
+$clr-grey-9: hsl(209, 61%, 16%);
+$clr-white: #fff;
+$clr-red-dark: hsl(360, 67%, 44%);
+$clr-red-light: hsl(360, 71%, 66%);
+$clr-green-dark: hsl(125, 67%, 44%);
+$clr-green-light: hsl(125, 71%, 66%);
+$clr-black: #222;
+$transition: all 0.3s linear;
+$spacing: 0.1rem;
+$radius: 0.25rem;
+$light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+$dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+$max-width: 1170px;
+$fixed-width: 450px;
+$clr-pink: #f28ab2;
 
 #root {
     max-width: 1280px;
@@ -49,3 +91,73 @@ h1 {
 .read-the-docs {
     color: #888;
 }
+
+/* section */
+.section {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: $max-width;
+  }
+  
+  @media screen and (min-width: 992px) {
+    .section {
+      width: 95vw;
+    }
+  }
+  
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .container {
+    width: 90vw;
+    margin: 5rem 0;
+    max-width: $fixed-width;
+    background: $clr-white;
+    border-radius: $radius;
+    padding: 1.5rem 2rem;
+    box-shadow: $dark-shadow;
+  }
+  .container h3 {
+    font-weight: normal;
+    text-transform: none;
+    margin-bottom: 2rem;
+  }
+  .person {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 0.75rem;
+    margin-bottom: 1.5rem;
+    text-align: left;
+  }
+  .person img {
+    width: 75px;
+    height: 75px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: $light-shadow;
+  }
+  .person h4 {
+    margin-bottom: 0;
+  }
+  .person p {
+    margin: 0;
+  }
+  .container button {
+    color: $clr-white;
+    display: block;
+    width: 100%;
+    border-color: transparent;
+    background: $clr-pink;
+    margin: 2rem auto 0 auto;
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
+    letter-spacing: $spacing;
+    border-radius: $radius;
+    outline: 1px solid rgba(242, 138, 178, 0.8);
+    cursor: pointer;
+  }
+  
