--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,120 +44,143 @@ $fixed-width: 450px;
 $clr-pink: #f28ab2;
 
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 h1 {
-    color: $primary;
+  color: $primary;
+}
+
+ul,
+ol {
+  list-style: none;
+
+  li {
+    a {
+      color: #000;
+
+      &.active {
+        color: $clr-pink;
+      }
+
+      &:hover {
+        color: $clr-pink;
+      }
+    }
+  }
 }
 
 .logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
 }
 
 .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
 
 .logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
 
-    to {
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-        animation: logo-spin infinite 20s linear;
-    }
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
 .card {
-    padding: 2em;
+  padding: 2em;
 }
 
 .read-the-docs {
-    color: #888;
+  color: #888;
 }
 
 /* section */
 .section {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: $max-width;
+  width: 90vw;
+  margin: 0 auto;
+  max-width: $max-width;
+}
+
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
   }
-  
-  @media screen and (min-width: 992px) {
-    .section {
-      width: 95vw;
-    }
-  }
-  
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .container {
-    width: 90vw;
-    margin: 5rem 0;
-    max-width: $fixed-width;
-    background: $clr-white;
-    border-radius: $radius;
-    padding: 1.5rem 2rem;
-    box-shadow: $dark-shadow;
-  }
-  .container h3 {
-    font-weight: normal;
-    text-transform: none;
-    margin-bottom: 2rem;
-  }
-  .person {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap: 0.75rem;
-    margin-bottom: 1.5rem;
-    text-align: left;
-  }
-  .person img {
-    width: 75px;
-    height: 75px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: $light-shadow;
-  }
-  .person h4 {
-    margin-bottom: 0;
-  }
-  .person p {
-    margin: 0;
-  }
-  .container button {
-    color: $clr-white;
-    display: block;
-    width: 100%;
-    border-color: transparent;
-    background: $clr-pink;
-    margin: 2rem auto 0 auto;
-    text-transform: capitalize;
-    font-size: 1.2rem;
-    padding: 0.5rem 0;
-    letter-spacing: $spacing;
-    border-radius: $radius;
-    outline: 1px solid rgba(242, 138, 178, 0.8);
-    cursor: pointer;
-  }
-  
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 90vw;
+  max-width: $fixed-width;
+  background: $clr-white;
+  border-radius: $radius;
+  padding: 1.5rem 2rem;
+  box-shadow: $dark-shadow;
+}
+
+.container h3 {
+  font-weight: normal;
+  text-transform: none;
+  margin-bottom: 2rem;
+}
+
+.person {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 0.75rem;
+  margin-bottom: 1.5rem;
+  text-align: left;
+}
+
+.person img {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: $light-shadow;
+}
+
+.person h4 {
+  margin-bottom: 0;
+}
+
+.person p {
+  margin: 0;
+}
+
+.container button {
+  color: $clr-white;
+  display: block;
+  width: 100%;
+  border-color: transparent;
+  background: $clr-pink;
+  margin: 2rem auto 0 auto;
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+  letter-spacing: $spacing;
+  border-radius: $radius;
+  outline: 1px solid rgba(242, 138, 178, 0.8);
+  cursor: pointer;
+}
