--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -198,7 +198,7 @@ Tours
 */
 main {
   width: 90vw;
-  max-width: var(--fixed-width);
+  max-width: $fixed-width;
   margin: 5rem auto;
 }
 .loading {
@@ -211,27 +211,27 @@ main {
 .underline {
   width: 6rem;
   height: 0.25rem;
-  background: var(--clr-primary-5);
+  background: $clr-primary-5;
   margin-left: auto;
   margin-right: auto;
 }
 
 .single-tour {
-  background: var(--clr-white);
-  border-radius: var(--radius);
+  background: $clr-white;
+  border-radius: $radius;
   margin: 2rem 0;
-  box-shadow: var(--light-shadow);
-  transition: var(--transition);
+  box-shadow: $light-shadow;
+  transition: $transition;
 }
 .single-tour:hover {
-  box-shadow: var(--dark-shadow);
+  box-shadow: $dark-shadow;
 }
 .single-tour img {
   width: 100%;
   height: 20rem;
   object-fit: cover;
-  border-top-right-radius: var(--radius);
-  border-top-left-radius: var(--radius);
+  border-top-right-radius: $radius;
+  border-top-left-radius: $radius;
 }
 .tour-info {
   display: flex;
@@ -246,16 +246,16 @@ main {
   background: transparent;
   border-color: transparent;
   text-transform: capitalize;
-  color: var(--clr-primary-5);
+  color: $clr-primary-5;
   font-size: 1rem;
   cursor: pointer;
   padding-left: 0.25rem;
 }
 .tour-price {
-  color: var(--clr-primary-5);
-  background: var(--clr-primary-10);
+  color: $clr-primary-5;
+  background: $clr-primary-9;
   padding: 0.25rem 0.5rem;
-  border-radius: var(--radius);
+  border-radius: $radius;
 }
 .single-tour footer {
   padding: 1.5rem 2rem;
@@ -264,12 +264,12 @@ main {
   display: block;
   width: 200px;
   margin: 1rem auto 0 auto;
-  color: var(--clr-red-dark);
-  letter-spacing: var(--spacing);
+  color: $clr-red-dark;
+  letter-spacing: $spacing;
   background: transparent;
-  border: 1px solid var(--clr-red-dark);
+  border: 1px solid $clr-red-dark;
   padding: 0.25rem 0.5rem;
-  border-radius: var(--radius);
+  border-radius: $radius;
 }
 
 /*
