--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,47 +1,7 @@
-/*
-=============== 
-Variables
-===============
-*/
-$primary: #7209b7;
-$secondary: #006466;
-/* dark shades of primary color*/
-$clr-primary-1: hsl(162, 61%, 89%);
-$clr-primary-2: hsl(162, 60%, 78%);
-$clr-primary-3: hsl(162, 61%, 67%);
-$clr-primary-4: hsl(162, 61%, 57%);
-/* primary/main color */
-$clr-primary-5: hsl(162, 73%, 46%);
-/* lighter shades of primary color */
-$clr-primary-6: #1aa179;
-$clr-primary-7: #13795b;
-$clr-primary-8: #0d503c;
-$clr-primary-9: #06281e;
-/* darkest grey - used for headings */
-$clr-grey-1: hsl(212, 33%, 89%);
-$clr-grey-2: hsl(210, 31%, 80%);
-$clr-grey-3: hsl(211, 27%, 70%);
-$clr-grey-4: hsl(209, 23%, 60%);
-/* grey used for paragraphs */
-$clr-grey-5: hsl(210, 22%, 49%);
-$clr-grey-6: hsl(209, 28%, 39%);
-$clr-grey-7: hsl(209, 34%, 30%);
-$clr-grey-8: hsl(211, 39%, 23%);
-$clr-grey-9: hsl(209, 61%, 16%);
-$clr-white: #fff;
-$clr-red-dark: hsl(360, 67%, 44%);
-$clr-red-light: hsl(360, 71%, 66%);
-$clr-green-dark: hsl(125, 67%, 44%);
-$clr-green-light: hsl(125, 71%, 66%);
-$clr-black: #222;
-$transition: all 0.3s linear;
-$spacing: 0.1rem;
-$radius: 0.25rem;
-$light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-$dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-$max-width: 1170px;
-$fixed-width: 450px;
-$clr-pink: #f28ab2;
+@use "_variables.scss" as variables;
+@use "_bdayreminder.scss";
+@use "_tours.scss";
+@use "_reviews.scss";
 
 #root {
   max-width: 1280px;
@@ -51,7 +11,7 @@ $clr-pink: #f28ab2;
 }
 
 h1 {
-  color: $primary;
+  color: variables.$primary;
 }
 
 ul,
@@ -65,11 +25,11 @@ ol {
       color: #000;
 
       &.active {
-        color: $clr-pink;
+        color: variables.$clr-pink;
       }
 
       &:hover {
-        color: $clr-pink;
+        color: variables.$clr-pink;
       }
     }
   }
@@ -117,7 +77,7 @@ ol {
 .section {
   width: 90vw;
   margin: 0 auto;
-  max-width: $max-width;
+  max-width: variables.$max-width;
 }
 
 @media screen and (min-width: 992px) {
@@ -131,261 +91,3 @@ main {
   justify-content: center;
   align-items: center;
 }
-
-/*
-=============== 
-Birthday Reminder
-===============
-*/
-
-.container {
-  width: 90vw;
-  max-width: $fixed-width;
-  background: $clr-white;
-  border-radius: $radius;
-  padding: 1.5rem 2rem;
-  box-shadow: $dark-shadow;
-}
-
-.container h3 {
-  font-weight: normal;
-  text-transform: none;
-  margin-bottom: 2rem;
-}
-
-.person {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 0.75rem;
-  margin-bottom: 1.5rem;
-  text-align: left;
-}
-
-.person img {
-  width: 75px;
-  height: 75px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: $light-shadow;
-}
-
-.person h4 {
-  margin-bottom: 0;
-}
-
-.person p {
-  margin: 0;
-}
-
-.container button {
-  color: $clr-white;
-  display: block;
-  width: 100%;
-  border-color: transparent;
-  background: $clr-pink;
-  margin: 2rem auto 0 auto;
-  text-transform: capitalize;
-  font-size: 1.2rem;
-  padding: 0.5rem 0;
-  letter-spacing: $spacing;
-  border-radius: $radius;
-  outline: 1px solid rgba(242, 138, 178, 0.8);
-  cursor: pointer;
-}
-
-/*
-=============== 
-Tours
-===============
-*/
-main {
-  width: 90vw;
-  max-width: $fixed-width;
-  margin: 5rem auto;
-}
-.loading {
-  text-align: center;
-}
-.title {
-  text-align: center;
-  margin-bottom: 4rem;
-}
-.underline {
-  width: 6rem;
-  height: 0.25rem;
-  background: $clr-primary-5;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.single-tour {
-  background: $clr-white;
-  border-radius: $radius;
-  margin: 2rem 0;
-  box-shadow: $light-shadow;
-  transition: $transition;
-}
-.single-tour:hover {
-  box-shadow: $dark-shadow;
-}
-.single-tour img {
-  width: 100%;
-  height: 20rem;
-  object-fit: cover;
-  border-top-right-radius: $radius;
-  border-top-left-radius: $radius;
-}
-.tour-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1.5rem;
-}
-.tour-info h4 {
-  margin-bottom: 0;
-}
-.single-tour button {
-  background: transparent;
-  border-color: transparent;
-  text-transform: capitalize;
-  color: $clr-primary-5;
-  font-size: 1rem;
-  cursor: pointer;
-  padding-left: 0.25rem;
-}
-.tour-price {
-  color: $clr-primary-5;
-  background: $clr-primary-9;
-  padding: 0.25rem 0.5rem;
-  border-radius: $radius;
-}
-.single-tour footer {
-  padding: 1.5rem 2rem;
-}
-.single-tour .delete-btn {
-  display: block;
-  width: 200px;
-  margin: 1rem auto 0 auto;
-  color: $clr-red-dark;
-  letter-spacing: $spacing;
-  background: transparent;
-  border: 1px solid $clr-red-dark;
-  padding: 0.25rem 0.5rem;
-  border-radius: $radius;
-}
-
-/*
-=============== 
-End Tours
-===============
-*/
-
-/*
-=============== 
-Start Reviews
-===============
-*/
-
-.review {
-  background: $clr-white;
-  padding: 1.5rem 2rem;
-  border-radius: $radius;
-  box-shadow: $light-shadow;
-  transition: $transition;
-  text-align: center;
-
-  &:hover {
-    box-shadow: $dark-shadow;
-  }
-
-  .img-container {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-bottom: 1.5rem;
-
-    &::before {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background: $clr-primary-5;
-      position: absolute;
-      top: -0.25rem;
-      right: -0.5rem;
-      border-radius: 50%;
-    }
-  }
-  .person-img {
-    width: 100%;
-    display: block;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    position: relative;
-  }
-  .quote-icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 2.5rem;
-    height: 2.5rem;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    transform: translateY(25%);
-    background: $clr-primary-5;
-    color: $clr-white;
-  }
-  .author {
-    margin-bottom: 0.25rem;
-  }
-  .job {
-    margin-bottom: 0.5rem;
-    text-transform: uppercase;
-    color: $clr-primary-5;
-    font-size: 0.85rem;
-  }
-  .info {
-    margin-bottom: 0.75rem;
-  }
-  .prev-btn,
-  .next-btn {
-    color: $clr-primary-7;
-    font-size: 1.25rem;
-    background: transparent;
-    border-color: transparent;
-    margin: 0 0.5rem;
-    transition: $transition;
-    cursor: pointer;
-
-    &:hover {
-      color: $clr-primary-5;
-    }
-  }
-
-  .random-btn {
-    margin-top: 0.5rem;
-    background: $clr-primary-9;
-    color: $clr-primary-5;
-    padding: 0.25rem 0.5rem;
-    text-transform: capitalize;
-    border-radius: $radius;
-    transition: $transition;
-    border-color: transparent;
-    cursor: pointer;
-  
-    :hover {
-      background: $clr-primary-5;
-      color: $clr-primary-1;
-    }
-  }
-}
-
-
-/*
-=============== 
-End Reviews
-===============
-*/
