03. Reviews task - add functionality for navigating between the reviews or checking at a random review.

--- a/src/styles/_reviews.scss
+++ b/src/styles/_reviews.scss
@@ -6,7 +6,7 @@ Start Reviews
 ===============
 */
 
-.review {
+.reviews {
     background: variables.$clr-white;
     padding: 1.5rem 2rem;
     border-radius: variables.$radius;
