04. FAQ task - implement the functionality for showing the list with FAQs and toggling every item in the list.

--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -6,54 +6,75 @@ Start FAQs
 ===============
 */
 
+@media screen and (min-width: 992px) {
+    .faq-list {
+        max-width: 800px;
+        display: grid;
+        grid-template-columns: 250px 1fr;
+    }
+}
+
+.faq-list {
+    width: 90vw;
+    margin: 5rem auto;
+    background: variables.$clr-white;
+    border-radius: variables.$radius;
+    padding: 2.5rem 2rem;
+    display: grid;
+    grid-gap: 1rem 2rem;
+    gap: 1rem 2rem;
+}
+
 .question {
     padding: 1rem 1.5rem;
-    border: 2px solid var(--clr-grey-special);
+    border: 2px solid variables.$clr-grey-5;
     margin-bottom: 1rem;
-    border-radius: var(--radius);
-    box-shadow: var(--light-shadow);
-}
+    border-radius: variables.$radius;
+    box-shadow: variables.$light-shadow;
 
-.question h4 {
-    text-transform: none;
-    line-height: 1.5;
-}
+    h4 {
+        text-transform: none;
+        line-height: 1.5;
+        margin-bottom: 0;
+    }
 
-.question p {
-    color: var(--clr-grey-3);
-    margin-bottom: 0;
-    margin-top: 0.5rem;
-}
+    p {
+        color: variables.$clr-grey-8;
+        margin-top: 0.5rem;
+        margin-bottom: 0;
+    }
 
-.question header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-.question header h4 {
-    margin-bottom: 0;
-}
+        h4 {
+            margin-bottom: 0;
+        }
+    }
 
-.btn {
-    background: transparent;
-    border-color: transparent;
-    width: 2rem;
-    height: 2rem;
-    background: var(--clr-grey-special);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    color: var(--clr-red-special);
-    cursor: pointer;
-    margin-left: 1rem;
-    align-self: center;
-    min-width: 2rem;
+    .btn {
+        background: transparent;
+        border-color: transparent;
+        width: 2rem;
+        min-width: 2rem;
+        height: 2rem;
+        background: variables.$clr-grey-1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        color: variables.$clr-red-dark;
+        cursor: pointer;
+        margin-left: 1rem;
+        align-self: center;
+        padding: inherit;
+    }
 }
 
 /*
-=============== 
-End FAQs
-===============
-*/
+  =============== 
+  End FAQs
+  ===============
+  */
