--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,3 +92,25 @@ main {
   justify-content: center;
   align-items: center;
 }
+
+main {
+  width: 90vw;
+  margin: 5rem auto;
+}
+
+.loading {
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.underline {
+  width: 6rem;
+  height: 0.25rem;
+  background: variables.$clr-primary-5;
+  margin-left: auto;
+  margin-right: auto;
+}
