--- a/src/styles/_jobs.scss
+++ b/src/styles/_jobs.scss
@@ -9,7 +9,7 @@ Jobs
 .jobs-center {
     width: 80vw;
     margin: 0 auto;
-    max-width: var(--max-width);
+    max-width: variables.$max-width;
 
     .tabs-container {
         display: flex;
@@ -23,59 +23,69 @@ Jobs
 .job-btn {
     background: transparent;
     border-color: transparent;
+    border-radius: 0;
     text-transform: capitalize;
     font-size: 1.25rem;
-    letter-spacing: var(--spacing);
+    letter-spacing: variables.$spacing;
     margin: 0 0.5rem;
-    transition: var(--transition);
+    transition: variables.$transition;
     cursor: pointer;
     padding: 0.25rem 0;
     line-height: 1;
-    outline-color: var(--clr-primary-10);
+    outline-color: variables.$clr-primary-1;
+
+    &:hover {
+        color: variables.$clr-primary-5;
+        box-shadow: 0 2px variables.$clr-primary-5;
+        border-color: transparent;
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+    &.active {
+        color: variables.$clr-primary-5;
+        box-shadow: 0 2px variables.$clr-primary-5;
+    }
 }
 
-.job-btn:hover {
-    color: var(--clr-primary-5);
-    box-shadow: 0 2px var(--clr-primary-5);
-}
+.job-info {
+    text-align: left;
 
-.active-btn {
-    color: var(--clr-primary-5);
-    box-shadow: 0 2px var(--clr-primary-5);
-}
+    h3 {
+        font-weight: 400;
+    }
 
-.job-info h3 {
-    font-weight: 400;
-}
+    h4 {
+        text-transform: uppercase;
+        color: variables.$clr-grey-5;
+        background: variables.$clr-grey-1;
+        display: inline-block;
+        padding: 0.375rem 0.75rem;
+        border-radius: variables.$radius;
+    }
 
-.job-info h4 {
-    text-transform: uppercase;
-    color: var(--clr-grey-5);
-    background: var(--clr-grey-9);
-    display: inline-block;
-    padding: 0.375rem 0.75rem;
-    border-radius: var(--radius);
-}
+    .job-date {
+        letter-spacing: variables.$spacing;
+    }
 
-.job-date {
-    letter-spacing: var(--spacing);
-}
+    .job-desc {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        column-gap: 2rem;
+        align-items: center;
+        margin-bottom: 1.25rem;
 
-.job-desc {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap: 2rem;
-    align-items: center;
-    margin-bottom: 1.25rem;
-}
+        p {
+            margin-bottom: 0;
+            color: variables.$clr-grey-8;
+        }
+    }
 
-.job-desc p {
-    margin-bottom: 0;
-    color: var(--clr-grey-3);
-}
-
-.job-icon {
-    color: var(--clr-primary-5);
+    .job-icon {
+        color: variables.$clr-primary-3;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -84,48 +94,22 @@ Jobs
         display: grid;
         grid-template-columns: 200px 1fr;
         column-gap: 4rem;
-    }
 
-    .tabs-container {
-        flex-direction: column;
-        justify-content: flex-start;
+        .tabs-container {
+            flex-direction: column;
+            justify-content: flex-start;
+        }
     }
 
     .job-btn {
         margin-bottom: 1rem;
+
+        &:hover {
+            box-shadow: -2px 0 variables.$clr-primary-5;
+        }
+
+        &.active {
+            box-shadow: -2px 0 variables.$clr-primary-5;
+        }
     }
-
-    .active-btn {
-        box-shadow: -2px 0 var(--clr-primary-5);
-    }
-
-    .job-btn:hover {
-        box-shadow: -2px 0 var(--clr-primary-5);
-    }
-}
-
-.tab {
-    text-transform: uppercase;
-    background: var(--clr-primary-5);
-    color: var(--clr-primary-9);
-    padding: 0.375rem 0.75rem;
-    letter-spacing: var(--spacing);
-    font-weight: 700;
-    -webkit-transition: var(--transition);
-    transition: var(--transition);
-    font-size: 0.875rem;
-    border: 2px solid transparent;
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    border-radius: var(--radius);
-    display: block;
-    width: 12rem;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 3rem;
-}
-
-.tab:hover {
-    color: var(--clr-primary-1);
-    background: var(--clr-primary-8);
 }
