--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -41,6 +41,29 @@
     .next {
         right: 0;
     }
+
+    article {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: variables.$transition;
+
+        &.activeSlide {
+            opacity: 1;
+            transform: translateX(0);
+        }
+
+        &.lastSlide {
+            transform: translateX(-100%);
+        }
+
+        &.nextSlide {
+            transform: translateX(100%);
+        }
+    }
 }
 
 @media (min-width: 800px) {
